--- a/sermon/read.html
+++ b/sermon/read.html
@@ -125,16 +125,9 @@
 <body>
 
     <!-- ✅ Include Header -->
-    <div data-include="https://www.tannatthaphon.online/partials/footer.html"></div>
+     <div data-include="https://www.tannatthaphon.online/partials/header.html"></div>
 
-  <script>
-    
-  </script>
-  <script src="https://www.tannatthaphon.online/js/main.js"></script>
-  <script src="https://www.tannatthaphon.online/js/analytics.js"></script>
-  <script src="https://www.tannatthaphon.online/js/form-handler.js"></script>
-  <script src="https://www.tannatthaphon.online/js/sdk.js"></script>
-  <script src="https://www.tannatthaphon.online/smooth.js"></script>
+<script src="https://www.tannatthaphon.online/js/include.js"></script>
 
 <script>
   document.addEventListener('includesLoaded', () => {
@@ -215,5 +208,6 @@ document.addEventListener('allIncludesLoaded', loadSermonDetail);
 </body>
 
 </html>
+
 
 
