--- a/sermon/read.html
+++ b/sermon/read.html
@@ -152,6 +152,8 @@
   <script>
     
   </script>
+ <script src="js/header-logic.js"></script>
+    <script src="/inciude.js"></script>
   <script src="https://www.tannatthaphon.online/js/main.js"></script>
   <script src="https://www.tannatthaphon.online/js/analytics.js"></script>
   <script src="https://www.tannatthaphon.online/js/form-handler.js"></script>
@@ -206,3 +208,4 @@ document.addEventListener('allIncludesLoaded', loadSermonDetail);
 </body>
 
 </html>
+
