--- a/give.html
+++ b/give.html
@@ -173,7 +173,26 @@
   <script src="https://www.tannatthaphon.online/js/form-handler.js"></script>
   <script src="https://www.tannatthaphon.online/js/sdk.js"></script>
   <script src="https://www.tannatthaphon.online/smooth.js"></script>
+  <script src="include.js"></script>
+
+<script>
+    // ฟังก์ชันสำหรับสลับแท็บ
+    function openTab(evt, tabName) {
+        let i, tabcontent, tablinks;
+        tabcontent = document.getElementsByClassName("tab-content");
+        for (i = 0; i < tabcontent.length; i++) {
+            tabcontent[i].style.display = "none";
+        }
+        tablinks = document.getElementsByClassName("tab-btn");
+        for (i = 0; i < tablinks.length; i++) {
+            tablinks[i].className = tablinks[i].className.replace(" active", "");
+        }
+        document.getElementById(tabName).style.display = "block";
+        evt.currentTarget.className += " active";
+    }
+</script>
     </body>
 
 </html>
+
 
