--- a/give.html
+++ b/give.html
@@ -71,11 +71,11 @@
 <link rel="stylesheet" href="https://www.tannatthaphon.online/css/variables.css">
 <link rel="stylesheet" href="https://www.tannatthaphon.online/css/home.css">
   <style>
-        .offering-section { max-width: 500px; margin: 40px auto; padding: 0 20px; font-family: 'Prompt', sans-serif; }
+        .offering-section { max-width: 500px; margin: 40px auto; padding: 0 20px;}
         
         /* Tab System */
         .tab-wrapper { display: flex; background: #eee; border-radius: 12px; padding: 5px; margin-bottom: 25px; }
-        .tab-btn { flex: 1; padding: 12px; border: none; background: none; cursor: pointer; border-radius: 8px; font-family: 'Prompt'; font-weight: 600; transition: 0.3s; color: var(--text-muted); }
+        .tab-btn { flex: 1; padding: 12px; border: none; background: none; cursor: pointer; border-radius: 8px;  font-weight: 600; transition: 0.3s; color: var(--text-muted); }
         .tab-btn.active { background: var(--primary-color); color: white; box-shadow: var(--shadow-sm); }
 
         .tab-content { display: none; background: white; border-radius: 15px; padding: 25px; border: 1px solid var(--border-color); box-shadow: var(--shadow-lg); }
@@ -194,5 +194,6 @@
     </body>
 
 </html>
+
 
 
