--- a/give.html
+++ b/give.html
@@ -136,7 +136,7 @@
             <img src="/assets/images/PromptPay.jpg" style="width: 130px; margin-bottom: 10px;">
             <div class="qr-image-wrapper">
                 <!-- ✅ ใส่รูป QR Code ของคุณตามพาธที่ระบุเรียบร้อยแล้ว -->
-                <img src="/assets/images/0871277654.png" alt="PromptPay QR Code">
+                <img src="https://promptpay.io/0871277654.png" alt="PromptPay QR Code">
             </div>
             <div class="bank-info">
                 <p><strong>ชื่อบัญชี:</strong> MR. HYEON JEA LEE</p>
@@ -194,6 +194,7 @@
     </body>
 
 </html>
+
 
 
 
