--- a/give.html
+++ b/give.html
@@ -133,7 +133,7 @@
     <!-- แท็บที่ 1: ช่องทางถวาย (แสดง QR Code) -->
     <div id="pay-tab" class="tab-content active">
         <div class="qr-container">
-            <img src="/assets/images/PromptPay.jpg" style="width: 130px; margin-bottom: 10px;">
+            <img src="https://upload.wikimedia.org/wikipedia/commons/c/c5/PromptPay-logo.png" style="width: 130px; margin-bottom: 10px;">
             <div class="qr-image-wrapper">
                 <!-- ✅ ใส่รูป QR Code ของคุณตามพาธที่ระบุเรียบร้อยแล้ว -->
                 <img src="https://promptpay.io/0871277654.png" alt="PromptPay QR Code">
@@ -194,6 +194,7 @@
     </body>
 
 </html>
+
 
 
 
