--- a/index.html
+++ b/index.html
@@ -68,6 +68,15 @@
     ]
   }
   </script>
+  <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-5M7X60SWVW"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-5M7X60SWVW');
+</script>
 <link rel="stylesheet" href="../css/style.css">
 <link rel="stylesheet" href="https://www.tannatthaphon.online/css/print.css" media="print">
 <link rel="stylesheet" href="https://www.tannatthaphon.online/css/variables.css">
@@ -225,3 +234,4 @@
     </body>
 
 </html>
+
